--- a/brain_orientation/brain_orientation_v01-Copy1.ipynb
+++ b/brain_orientation/brain_orientation_v01-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "deff6e1e",
+   "id": "755f54b6",
    "metadata": {},
    "source": [
     "# Goal\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4a05161",
+   "id": "e4978297",
    "metadata": {},
    "source": [
     "# caveats\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12662fc",
+   "id": "9a5e849c",
    "metadata": {},
    "source": [
     "# v01\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83a4ad07",
+   "id": "4586d9d3",
    "metadata": {},
    "source": [
     "In v01 copy 1, I will use a regular net"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e0e53e0d",
+   "id": "02743f43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,8 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib notebook\n",
     "import torch\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
     "import moment_kernels_3d as mk\n",
     "from glob import glob\n",
     "import nibabel as nib\n",
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8cf4552",
+   "id": "073296a9",
    "metadata": {},
    "source": [
     "# start with a dataset\n"
@@ -75,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5c2a4e99",
+   "id": "e0598195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e00ded91",
+   "id": "deed914e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1301c6fc",
+   "id": "fd7d63a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1c377d78",
+   "id": "3496f1fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "411a3225",
+   "id": "5a19831f",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bffaf54c",
+   "id": "0dd97d4f",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e8baccfa",
+   "id": "9637fb49",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ebb7b45b",
+   "id": "3e7d68da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b23b2b2b",
+   "id": "0319c408",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c6d93f0c",
+   "id": "26423cc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "984c34e6",
+   "id": "60f76155",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9c4cfc2c",
+   "id": "a5022590",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "60421485",
+   "id": "74f820d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52ff4ed2",
+   "id": "abc5b1d8",
    "metadata": {},
    "source": [
     "# now a network"
@@ -318,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "850ddfa5",
+   "id": "301e1663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4f40cd86",
+   "id": "b3d73488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "14770b6d",
+   "id": "01b36c3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1253a27f",
+   "id": "77815838",
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5e4c110a",
+   "id": "991e2b25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e99b1b2e",
+   "id": "c65c4918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4e32d785",
+   "id": "2f76b03b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "20700133",
+   "id": "b3dcbc00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2f2a236b",
+   "id": "7365ef56",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6620edad",
+   "id": "6019c25a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3ee89710",
+   "id": "10222700",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f5b27031",
+   "id": "fca85117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9aed58b0",
+   "id": "37ccfd6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "47f3da03",
+   "id": "11763e50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b1fe3ca9",
+   "id": "d504fa4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,17 +658,17 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "31885b04",
+   "id": "4f076c8e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "resume = True"
+    "resume = False"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c1f49a4a",
+   "id": "4e87c111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b870b425",
+   "id": "4330a68a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c4ab2ef1",
+   "id": "e6f992e0",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddbbed7c",
+   "id": "91d07830",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1856,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80ffd750",
+   "id": "912dcc7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1866,7 +1868,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb5b57cc",
+   "id": "255fecff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1876,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f70d77fe",
+   "id": "6381b287",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1887,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "271506e0",
+   "id": "16f8d93c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1898,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8be41454",
+   "id": "a7c4b6c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1964,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a1e58b4",
+   "id": "fb3f2f10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1974,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dacbc62",
+   "id": "9c12f24b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1985,7 +1987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b4c5360",
+   "id": "85e58ed5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1995,7 +1997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41dc2a11",
+   "id": "9b1655b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2005,7 +2007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9f9a3c0",
+   "id": "bce43c92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2015,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7a9f858",
+   "id": "8e56cb08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2027,7 +2029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95460139",
+   "id": "29053a51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2037,7 +2039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84508487",
+   "id": "c8162f0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2048,7 +2050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa315a47",
+   "id": "ea6ece3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2058,7 +2060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b77b887",
+   "id": "aab63dee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2068,7 +2070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab0cad08",
+   "id": "333c431a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2076,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adbe7e21",
+   "id": "b29bd0e3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2084,7 +2086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea8c2b76",
+   "id": "2ad6c7d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2095,7 +2097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58781453",
+   "id": "2b84aa67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2105,7 +2107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fcf69b6",
+   "id": "f7570487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2115,7 +2117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34c849fa",
+   "id": "28e043f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2126,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fc04c09",
+   "id": "be08ff54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,7 +2139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c687501c",
+   "id": "d0638de3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2148,7 +2150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133d44d7",
+   "id": "85dc71ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2159,7 +2161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ffcd53",
+   "id": "63458cc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2170,7 +2172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fccc261",
+   "id": "67ab6433",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2181,7 +2183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e3eb738",
+   "id": "7f9cce96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2192,7 +2194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67102d7c",
+   "id": "6d6134a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2220,7 +2222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4b47bc6",
+   "id": "7dbed8e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2236,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4630293e",
+   "id": "d0625b8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2250,7 +2252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffb59089",
+   "id": "15bdb3bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2261,7 +2263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb988ba0",
+   "id": "51a773c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2290,7 +2292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db594c57",
+   "id": "4bcce887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2300,7 +2302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d75f99b",
+   "id": "0486e87b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2308,7 +2310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c3a307d",
+   "id": "3759e368",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2316,7 +2318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd726282",
+   "id": "fc695802",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2324,7 +2326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12fd322c",
+   "id": "ee509e33",
    "metadata": {},
    "outputs": [],
    "source": []
