--- a/brain_orientation/brain_orientation_v01.ipynb
+++ b/brain_orientation/brain_orientation_v01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e4f683e0",
+   "id": "a380e3fe",
    "metadata": {},
    "source": [
     "# Goal\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a1cacf8",
+   "id": "49ca463c",
    "metadata": {},
    "source": [
     "# caveats\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebd1ec3b",
+   "id": "51cb195f",
    "metadata": {},
    "source": [
     "# v01\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bfeca982",
+   "id": "b1504185",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +50,8 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib notebook\n",
     "import torch\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
     "import moment_kernels_3d as mk\n",
     "from glob import glob\n",
     "import nibabel as nib\n",
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b302fdf",
+   "id": "a0d56dfb",
    "metadata": {},
    "source": [
     "# start with a dataset\n"
@@ -67,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "28183da3",
+   "id": "76e6cc22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "01baffbd",
+   "id": "001f6eb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "92eecfbf",
+   "id": "4298e963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "31f2085d",
+   "id": "1b6fe5be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6a8516b9",
+   "id": "dfbc5491",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ce544d31",
+   "id": "14d64678",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "79c1c612",
+   "id": "3ce81f88",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5e23ad00",
+   "id": "f6b0f015",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "89c52417",
+   "id": "4173631d",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5520ed0f",
+   "id": "32d99b12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "be3e7d74",
+   "id": "3a5b4c44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fa97436e",
+   "id": "182a4ea4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1a2a2bb9",
+   "id": "318244d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99eb28e5",
+   "id": "7bd80a8a",
    "metadata": {},
    "source": [
     "# now a network"
@@ -310,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ddde31a4",
+   "id": "8b510453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "83dcc348",
+   "id": "020a580e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "07ea68d2",
+   "id": "29d508ce",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be90b814",
+   "id": "53d3f988",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -466,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "da13c742",
+   "id": "3c85ffe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bf2696d3",
+   "id": "a65bb4bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4d01f7bb",
+   "id": "2bc3d02f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "69e6b64a",
+   "id": "81fcc3af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d3c4e438",
+   "id": "0b6760c9",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4171e95a",
+   "id": "1042f082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "48ea1c9d",
+   "id": "99a75a42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ff04df79",
+   "id": "8c629701",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c7d59c05",
+   "id": "52fa304f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cfb6f9e6",
+   "id": "71c903af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "808be3bc",
+   "id": "b2f4a06d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,17 +601,17 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "621e723e",
+   "id": "174f5d85",
    "metadata": {},
    "outputs": [],
    "source": [
-    "resume = True"
+    "resume = False"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6b7e194d",
+   "id": "c4ce7d3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b5abf82f",
+   "id": "576ca2ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fde3b3fe",
+   "id": "1345c41b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -679,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "bc0aa841",
+   "id": "b9edf6e4",
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1790,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8e29b3c0",
+   "id": "1e19cb78",
    "metadata": {},
    "outputs": [
     {
@@ -2776,7 +2778,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "95b69386",
+   "id": "d68f1404",
    "metadata": {},
    "outputs": [
     {
@@ -2798,7 +2800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7e35945",
+   "id": "caff9b2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2808,7 +2810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6393a2b9",
+   "id": "d544555e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2820,7 +2822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfba7077",
+   "id": "6575bd48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2831,7 +2833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b71c3d09",
+   "id": "40055877",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2841,7 +2843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16bc5a4f",
+   "id": "ed1b0dc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2851,7 +2853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdd0865a",
+   "id": "0b5983c5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2859,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f11a2445",
+   "id": "6d7c46bf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2867,7 +2869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "287a5d3b",
+   "id": "25a086ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2878,7 +2880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2441f58",
+   "id": "09d67de7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2888,7 +2890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bffa5076",
+   "id": "a6a69c8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2898,7 +2900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbfe5285",
+   "id": "b1472589",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2909,7 +2911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2393ef52",
+   "id": "4292a63a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2920,7 +2922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f494a306",
+   "id": "b2941be3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2931,7 +2933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6a5c51c",
+   "id": "8f73f577",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2942,7 +2944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc6044f7",
+   "id": "ad81ced3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2953,7 +2955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e1502bb",
+   "id": "f2757c1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2964,7 +2966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e267e66f",
+   "id": "38e5741d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2975,7 +2977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca1ec213",
+   "id": "e009f398",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3003,7 +3005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8760166d",
+   "id": "adb78f6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3019,7 +3021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c18a091e",
+   "id": "79bc1851",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3033,7 +3035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab536e36",
+   "id": "ab63f53a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3044,7 +3046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcb84c7f",
+   "id": "fc172329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3073,7 +3075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6011833e",
+   "id": "7e5bed45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3083,7 +3085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bacac6e",
+   "id": "bb969ec9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3091,7 +3093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d817ad1a",
+   "id": "24bfd183",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3099,7 +3101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0651140c",
+   "id": "33efea0d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3107,7 +3109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0498e88a",
+   "id": "66f80321",
    "metadata": {},
    "outputs": [],
    "source": []
