changed resume to true

--- a/brain_orientation/brain_orientation_v01.ipynb
+++ b/brain_orientation/brain_orientation_v01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a380e3fe",
+   "id": "75935d57",
    "metadata": {},
    "source": [
     "# Goal\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49ca463c",
+   "id": "3db2b413",
    "metadata": {},
    "source": [
     "# caveats\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51cb195f",
+   "id": "55f6729e",
    "metadata": {},
    "source": [
     "# v01\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b1504185",
+   "id": "db0e1579",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0d56dfb",
+   "id": "c12c1007",
    "metadata": {},
    "source": [
     "# start with a dataset\n"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "76e6cc22",
+   "id": "46d5b23c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "001f6eb9",
+   "id": "80ccd07e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4298e963",
+   "id": "2759a32d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1b6fe5be",
+   "id": "225b439b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dfbc5491",
+   "id": "92303d98",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "14d64678",
+   "id": "8fcb3001",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3ce81f88",
+   "id": "19f706ed",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f6b0f015",
+   "id": "4d044e53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4173631d",
+   "id": "21fcafaa",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "32d99b12",
+   "id": "7f73e537",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3a5b4c44",
+   "id": "9d9e7ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "182a4ea4",
+   "id": "4ee171ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "318244d9",
+   "id": "6345720f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd80a8a",
+   "id": "1c22ffbc",
    "metadata": {},
    "source": [
     "# now a network"
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8b510453",
+   "id": "5ee9ef73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "020a580e",
+   "id": "784efa0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "29d508ce",
+   "id": "7840e644",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53d3f988",
+   "id": "edc4276e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3c85ffe7",
+   "id": "4ca19062",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a65bb4bc",
+   "id": "ab408fc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2bc3d02f",
+   "id": "1938679e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "81fcc3af",
+   "id": "cd85b327",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "0b6760c9",
+   "id": "e4733691",
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1042f082",
+   "id": "656585d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "99a75a42",
+   "id": "64769a0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "8c629701",
+   "id": "92c29f44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "52fa304f",
+   "id": "622742b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "71c903af",
+   "id": "a8003a88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "b2f4a06d",
+   "id": "dee0c726",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,17 +601,17 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "174f5d85",
+   "id": "5ffc6e0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "resume = False"
+    "resume = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "c4ce7d3e",
+   "id": "63ab876c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "576ca2ca",
+   "id": "8bfdeeab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1345c41b",
+   "id": "9f9c0969",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b9edf6e4",
+   "id": "9fff8868",
    "metadata": {},
    "outputs": [
     {
@@ -1790,7 +1790,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1e19cb78",
+   "id": "85705204",
    "metadata": {},
    "outputs": [
     {
@@ -2778,7 +2778,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "d68f1404",
+   "id": "f53c547a",
    "metadata": {},
    "outputs": [
     {
@@ -2800,7 +2800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caff9b2a",
+   "id": "e182e971",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2810,7 +2810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d544555e",
+   "id": "c8b1892c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2822,7 +2822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6575bd48",
+   "id": "a1fc4069",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2833,7 +2833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40055877",
+   "id": "0c2e77a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2843,7 +2843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed1b0dc2",
+   "id": "0f817a08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2853,7 +2853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b5983c5",
+   "id": "8b41b9b5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2861,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d7c46bf",
+   "id": "b7a6303e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2869,7 +2869,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25a086ce",
+   "id": "b9398025",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2880,7 +2880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09d67de7",
+   "id": "fc381225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2890,7 +2890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6a69c8d",
+   "id": "740cf2ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2900,7 +2900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1472589",
+   "id": "53c075c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2911,7 +2911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4292a63a",
+   "id": "054d9d71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2922,7 +2922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2941be3",
+   "id": "44a166ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2933,7 +2933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f73f577",
+   "id": "7d947b95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2944,7 +2944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad81ced3",
+   "id": "4cf032b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2955,7 +2955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2757c1b",
+   "id": "166df410",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2966,7 +2966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38e5741d",
+   "id": "1ffb77de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2977,7 +2977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e009f398",
+   "id": "6c62d6cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3005,7 +3005,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb78f6e",
+   "id": "ff777737",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3021,7 +3021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79bc1851",
+   "id": "71be3fd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3035,7 +3035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab63f53a",
+   "id": "1f6be689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3046,7 +3046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc172329",
+   "id": "a4ce7b25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3075,7 +3075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e5bed45",
+   "id": "26bec186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3085,7 +3085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb969ec9",
+   "id": "ecb29dbd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3093,7 +3093,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24bfd183",
+   "id": "91ff08cb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3101,7 +3101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33efea0d",
+   "id": "2b9b6af7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3109,7 +3109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66f80321",
+   "id": "08d66ef4",
    "metadata": {},
    "outputs": [],
    "source": []
