--- a/brain_orientation/brain_orientation_v01-Copy1.ipynb
+++ b/brain_orientation/brain_orientation_v01-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "755f54b6",
+   "id": "6055d8c8",
    "metadata": {},
    "source": [
     "# Goal\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4978297",
+   "id": "afedb008",
    "metadata": {},
    "source": [
     "# caveats\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a5e849c",
+   "id": "2a19e909",
    "metadata": {},
    "source": [
     "# v01\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4586d9d3",
+   "id": "3d137ee1",
    "metadata": {},
    "source": [
     "In v01 copy 1, I will use a regular net"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "02743f43",
+   "id": "3b2733b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "073296a9",
+   "id": "8462fb67",
    "metadata": {},
    "source": [
     "# start with a dataset\n"
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e0598195",
+   "id": "f975d6a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "deed914e",
+   "id": "165829cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd7d63a1",
+   "id": "42332f3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3496f1fa",
+   "id": "33f71472",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5a19831f",
+   "id": "7de02c48",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0dd97d4f",
+   "id": "2c7a5c03",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9637fb49",
+   "id": "3fd47dd0",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3e7d68da",
+   "id": "553cbaad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0319c408",
+   "id": "ec105dab",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "26423cc6",
+   "id": "1639a1a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "60f76155",
+   "id": "23b5e1bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a5022590",
+   "id": "512efab5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "74f820d7",
+   "id": "c7c9fb2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abc5b1d8",
+   "id": "0cb61cfa",
    "metadata": {},
    "source": [
     "# now a network"
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "301e1663",
+   "id": "00deadb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b3d73488",
+   "id": "db3db47e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "01b36c3c",
+   "id": "f347cde2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "77815838",
+   "id": "f847664b",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "991e2b25",
+   "id": "0a7c3dc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c65c4918",
+   "id": "a78df93f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2f76b03b",
+   "id": "342745d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b3dcbc00",
+   "id": "1b6262f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7365ef56",
+   "id": "182124ee",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6019c25a",
+   "id": "266c7193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "10222700",
+   "id": "c63c82a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fca85117",
+   "id": "5665b5af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "37ccfd6c",
+   "id": "ce8a1401",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "11763e50",
+   "id": "cf8c470e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d504fa4f",
+   "id": "bd783c9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,17 +658,17 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "4f076c8e",
+   "id": "79618446",
    "metadata": {},
    "outputs": [],
    "source": [
-    "resume = False"
+    "resume = True"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4e87c111",
+   "id": "bd2c51af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4330a68a",
+   "id": "fa41acf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e6f992e0",
+   "id": "ec689831",
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91d07830",
+   "id": "6a9bd49a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1858,7 +1858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "912dcc7c",
+   "id": "ef4ddfe8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1868,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "255fecff",
+   "id": "284f25a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6381b287",
+   "id": "bc0fcf7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16f8d93c",
+   "id": "f9996509",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7c4b6c8",
+   "id": "fa609397",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1966,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb3f2f10",
+   "id": "f470408a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1976,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c12f24b",
+   "id": "181788b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1987,7 +1987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85e58ed5",
+   "id": "b1534939",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1997,7 +1997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b1655b2",
+   "id": "cfa75ce2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2007,7 +2007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bce43c92",
+   "id": "f72a4569",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2017,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e56cb08",
+   "id": "2cec25e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2029,7 +2029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29053a51",
+   "id": "3fc60b31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2039,7 +2039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8162f0f",
+   "id": "ca249ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2050,7 +2050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea6ece3f",
+   "id": "2d07d65f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2060,7 +2060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aab63dee",
+   "id": "0e30e4fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2070,7 +2070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "333c431a",
+   "id": "7638f6e0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b29bd0e3",
+   "id": "1031b0d3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2086,7 +2086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ad6c7d6",
+   "id": "976b87ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2097,7 +2097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b84aa67",
+   "id": "27c39ae1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2107,7 +2107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7570487",
+   "id": "cffccbbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2117,7 +2117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28e043f0",
+   "id": "9a80f541",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,7 +2128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be08ff54",
+   "id": "0e07ce8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2139,7 +2139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0638de3",
+   "id": "fa66265c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2150,7 +2150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85dc71ac",
+   "id": "53667ea3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2161,7 +2161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63458cc0",
+   "id": "1839a77f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2172,7 +2172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67ab6433",
+   "id": "a4fce5c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2183,7 +2183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f9cce96",
+   "id": "f1b6df27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2194,7 +2194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d6134a4",
+   "id": "c92865e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2222,7 +2222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dbed8e6",
+   "id": "01870ca7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2238,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0625b8d",
+   "id": "44ab5101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2252,7 +2252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15bdb3bd",
+   "id": "3cba6dbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2263,7 +2263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51a773c0",
+   "id": "1457cd21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2292,7 +2292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bcce887",
+   "id": "f53c5ac8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2302,7 +2302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0486e87b",
+   "id": "1b1526fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2310,7 +2310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3759e368",
+   "id": "09c8b942",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2318,7 +2318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc695802",
+   "id": "406406c8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2326,7 +2326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee509e33",
+   "id": "e3592d68",
    "metadata": {},
    "outputs": [],
    "source": []
