--- a/demo_v00.ipynb
+++ b/demo_v00.ipynb
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "pain_filename = 'Pain Scale Chart.png'\n",
+    "pain_filename = 'images/Pain Scale Chart.png'\n",
     "I = plt.imread(pain_filename)\n",
     "if I.shape[-1] == 4:\n",
     "    I = I[...,:3]\n",
